# coredump_lib

./: CMakeLists.txt
lib/: lib.cpp
src/: test.cpp
